--- a/PGApp/src/assets/styles/Home.css
+++ b/PGApp/src/assets/styles/Home.css
@@ -56,19 +56,12 @@ background-color: var(--background-color);
 }
 
 .game-cards {
-display: grid;
-grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-gap: 2rem;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+gap: 6rem;
 width: 100%;
 margin: 0 auto;
-}
-
-.game-card {
-background-color: white;
-border-radius: var(--border-radius-lg);
-overflow: hidden;
-box-shadow: var(--shadow-md);
-transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .game-card:hover {
