--- a/PGApp/src/assets/styles/Header.css
+++ b/PGApp/src/assets/styles/Header.css
@@ -1,5 +1,5 @@
 .header {
-background-color: #000000;
+background-color: #010504;
 position: sticky;
 top: 0;
 z-index: 1000;
@@ -10,7 +10,7 @@ box-shadow: var(--shadow-md);
 display: flex;
 justify-content: space-between;
 align-items: center;
-padding: 0.5rem 1.5rem;
+padding: 0.5rem 1rem;
 width: 100%; 
 margin: 0 auto;
 }
@@ -100,6 +100,7 @@ top: 8px;
 .logo-image {
 height: 48px;
 width: auto;
+filter: brightness(1.8) contrast(1.4);
 }
 
 .logo a {
