--- a/PGApp/src/assets/styles/Home.css
+++ b/PGApp/src/assets/styles/Home.css
@@ -19,12 +19,12 @@ margin: 0 auto;
 .hero h1 {
 font-family: var(--font-accent);
 font-size: 3rem;
-margin-bottom: 1.5rem;
+margin-bottom: 1rem;
 text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .hero p {
-font-size: 1.2rem;
+font-size: 1.3rem;
 margin-bottom: 2rem;
 opacity: 0.9;
 }
@@ -36,9 +36,13 @@ gap: 1rem;
 flex-wrap: wrap;
 }
 
+.section-header p {
+    font-size: 20px;
+}
+
 /* Featured Games Section */
 .featured-games {
-padding: 5rem 2rem;
+padding: 3rem 0;
 background-color: var(--background-color);
 }
 
@@ -46,9 +50,9 @@ background-color: var(--background-color);
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
-gap: 6rem;
+gap: 3rem;
+margin-bottom: 3rem;
 width: 100%;
-margin: 0 auto;
 }
 
 .game-card:hover {
@@ -134,6 +138,39 @@ background-color: black;
 transform: scale(1.05);
 }
 
+.slogan {
+text-align: center;
+margin-bottom: 2rem;
+position: relative;
+}
+
+.slogan h2 {
+font-family: var(--font-accent);
+font-size: 2rem;
+background: linear-gradient(180deg, var(--primary-light), var(--secondary-light));
+-webkit-background-clip: text;
+background-clip: text;
+-webkit-text-fill-color: transparent;
+display: inline-block;
+padding: 0.5rem 1.5rem;
+position: relative;
+text-transform: uppercase;
+letter-spacing: 1px;
+text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.slogan h2::after {
+content: '';
+position: absolute;
+bottom: 0;
+left: 50%;
+transform: translateX(-50%);
+width: 80%;
+height: 3px;
+background: linear-gradient(90deg, var(--secondary-color), var(--primary-color));
+border-radius: 3px;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
 .hero {
@@ -156,5 +193,9 @@ transform: scale(1.05);
 .game-cards {
     grid-template-columns: 1fr;
     max-width: 400px;
+}
+
+.slogan h2 {
+    font-size: 1.4rem;
 }
 }
