--- a/PGApp/src/assets/styles/Games.css
+++ b/PGApp/src/assets/styles/Games.css
@@ -4,7 +4,7 @@ width: 100%;
 }
 
 .games-header {
-background: linear-gradient(135deg, var(--primary-dark), var(--primary-color));
+background: linear-gradient(135deg, var(--secondary-dark), var(--secondary-color));
 padding: 4rem 0;
 text-align: center;
 color: var(--text-white);
