--- a/PGApp/src/assets/styles/Connect.css
+++ b/PGApp/src/assets/styles/Connect.css
@@ -3,7 +3,7 @@ padding-bottom: 60px;
 }
 
 .connect-header {
-background: linear-gradient(135deg, var(--secondary-dark), var(--secondary-color));
+background: linear-gradient(135deg, var(--primary-dark), var(--primary-color));
 color: white;
 padding: 4rem 0;
 text-align: center;
@@ -18,7 +18,7 @@ margin-bottom: 1rem;
 .connect-header p {
 max-width: 800px;
 margin: 0 auto;
-font-size: 1.2rem;
+font-size: 1.3rem;
 opacity: 0.9;
 }
 
@@ -40,7 +40,7 @@ margin: 10px;
 .creator-image img {
 width: 100%;
 border-radius: 175px;
-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .creator-info {
@@ -50,7 +50,7 @@ flex: 1;
 .creator-info h2 {
 margin-top: 0;
 font-size: 2rem;
-color: #333;
+color: var(--text-color);
 margin-bottom: 20px;
 }
 
@@ -59,7 +59,12 @@ font-size: 1.1rem;
 line-height: 1.6;
 margin-bottom: 25px;
 margin-right: 120px;
-color: #555;
+color: var(--text-color);
+}
+
+.creator-links svg,
+.creator-links i {
+  margin-right: 0.25rem;
 }
 
 .creator-links {
@@ -67,16 +72,13 @@ margin-bottom: 25px;
 }
 
 .creator-links h3 {
-font-size: 1.3rem;
-margin-bottom: 15px;
-color: #444;
+font-size: 1.6rem;
+color: var(--text-color);
 }
 
 .creator-links ul {
 list-style: none;
-padding: 0;
 display: grid;
-grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 gap: 10px;
 }
 
@@ -106,8 +108,8 @@ border-left: 4px solid #2575fc;
 
 .creator-message p {
 margin: 0;
-font-size: 1.05rem;
-color: #555;
+font-size: 1.1rem;
+color: var(--text-color);
 }
 
 /* Responsive design */
