Adjusted color scheme for explore games button

--- a/PGApp/src/App.css
+++ b/PGApp/src/App.css
@@ -4,6 +4,7 @@
   --primary-color: #6200ea;
   --primary-light: #9d46ff;
   --primary-dark: #0a00b6;
+  --primary-alt: #b575ff;
   --secondary-color: #00e676;
   --secondary-light: #66ffa6;
   --secondary-dark: #00b248;
@@ -137,12 +138,12 @@ a:hover {
 }
 
 .btn-primary {
-  background-color: var(--primary-color);
+  background-color: var(--primary-light);
   color: var(--text-white);
 }
 
 .btn-primary:hover {
-  background-color: var(--primary-light);
+  background-color: var(--primary-alt);
   color: var(--text-white);
 }
 
